# Datapoint2200

./: .gitignore  Cargo.toml  Games.tap  Readme.md  index.html  todo.md  tstdis1.1_3-75.fixed.tap  understanding_the_machine.md
.config/: nextest.toml
assets/: manifest.json
src/: app.rs  assembler.rs  clock.rs  cpu.rs  databus.rs  datapoint.rs  disassembler.rs  instruction.rs  lib.rs  main.rs  main.rs.bak  time.rs
src/DP2200/: assembler.rs  cassette.rs  clock.rs  cpu.rs  databus.rs  datapoint.rs  disassembler.rs  instruction.rs  keyboard.rs  mod.rs  screen.rs
src/ui/: mod.rs  ui.rs  ui_disassembler.rs
test_software/: banner.asm
