[package]
name = "datapoint2200"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[lib]
crate-type = ["cdylib"]

[dependencies]
parse_int = "0.6.0"
anyhow = "1.0.66"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
test-log = "0.2.11"
console_log = "0.2.0"
env_logger = "*"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  "Performance",
  "Event",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableCellElement",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollLogicalPosition",
  "HtmlCollection",
  "KeyboardEvent"
]

