[package]
name = "datapoint2200"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "disassemble_tap"
path = "src/main.rs"
test = false
bench = false

[dependencies]
parse_int = "0.6.0"
anyhow = "1.0.66"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
glob = "*"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
crossterm = "0.28.1"
